style: add bootstrap style, script and icons

--- a/src/index.css
+++ b/src/index.css
@@ -1,72 +1,5 @@
 * {
+    box-sizing: border-box;
+    padding: 0;
     margin: 0;
-}
-
-body {
-    width: 80%;
-    margin: 0 auto;
-    cursor: default;
-}
-
-.header {
-    display: flex;
-    justify-content: space-between;
-    background-color: transparent;
-    color: floralwhite;
-    padding-right: 1.4rem;
-    height: 4rem;
-    align-items: center;
-    margin-bottom: 1rem;
-}
-.header::after {
-    background-color: #1d1d1d;
-    position: absolute;
-    content: "";
-    height: 4rem;
-    left: 0;
-    right: 0;
-    z-index: -1;
-}
-.nav-bar ul {
-    display: flex;
-}
-
-.nav-list { list-style: none; }
-.nav-link {
-    text-decoration: none;
-    display: inline-block;
-    color: floralwhite;
-    padding: .6rem .8rem;
-}
-
-/* Home content */
-
-.pg-title {
-    margin-top: 2.8rem;
-    margin-bottom: 1rem;
-}
-
-
-
-.b-preview {
-    padding: .8rem .4rem;
-    margin: .8rem;
-    color: #1d1d1d;
-    background-color: rgb(252, 250, 244);
-    width: 600px;
-
-    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.083);
-}
-
-.b-title {
-    margin-bottom: .4rem;
-}
-
-.b-title:hover {
-    cursor: pointer;
-}
-
-.b-author:hover {
-    cursor: pointer;
-    color: rgba(35, 218, 215, 0.776);
 }
