--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+:root {
+    --primary: #00B4F0;
+    --primary-lightest: #59D6FF;
+
+    --grey: #212B36;
+    --greys-lightest: #343434;
+    
+}
+
 * {
     box-sizing: border-box;
     padding: 0;
