--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,15 @@
-:root {
-    --primary: #00B4F0;
-    --primary-lightest: #59D6FF;
-
-    --grey: #212B36;
-    --greys-lightest: #343434;
-    
-}
+@import url(./utils/var.css);
 
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+}
+.navbar-brand {
+    font-family: var(--text-serif);
+    font-weight: bold;
+    font-style: italic;
+}
+.nav-link, form button {
+    font-family: var(--text-sans);
 }
