--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url(./utils/var.css);
+@import url(./../node_modules/bootstrap-icons/font/bootstrap-icons.css);
 
 * {
     box-sizing: border-box;
@@ -12,4 +13,13 @@
 }
 .nav-link, form button {
     font-family: var(--text-sans);
+}
+
+.para {
+    font-family: var(--text-serif);
+    opacity: 88%;
+
+}
+.bg-dark-light {
+    background-color: var(--bg-dark-light);
 }
