add the poem section

--- a/src/index.css
+++ b/src/index.css
@@ -15,22 +15,13 @@
     font-family: var(--text-sans);
 }
 
-.para {
-    opacity: 88%;
-}
-.bg-dark-light {
-    background-color: var(--bg-dark-light);
-}
-
-.text-serif {
-    font-family: var(--text-serif);
-}
-
 .text-20 {
     font-size: var(--ps);
     font-family: var(--text-serif);
 }
 
-.text-bold {
-    font-weight: bold;
-}
+.para { opacity: 88%; }
+.bg-dark-light { background-color: var(--bg-dark-light); }
+.text-serif { font-family: var(--text-serif); }
+.text-sans { font-family: var(--text-sans); }
+.text-medium { font-weight:300; }
