--- a/src/utils/var.css
+++ b/src/utils/var.css
@@ -6,6 +6,8 @@
   /* --grey: #212B36; */
   --bg-dark-light: #282828f9;
   --greys-lightest: #343434;
+
+  --greys-100: #eaeaea;
   
 
   --text-serif: 'Lora', serif;
